--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </div>
     </div>
 
-    <footer class="myFooter"><hr>Coded by <a href="https://www.freecodecamp.com/carges">carges</a></footer>
+    <footer class="footer"><hr>Coded by <a href="https://www.freecodecamp.com/carges">carges</a></footer>
   </body>
 
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
